2011-01-14  Petasis George  <petasis@iit.demokritos.gr>
        * /library/tkdnd_macosx.tcl: Fixed a bug reported by Kevin Walzer:
        macdnd::_GetDroppedData and xdnd::_GetDroppedData were missing the
        "time" argument, added in the XDND section for TIP 370 (if it gets
        accepted).

        * /macosx/macdnd.m: Restored back a workarround by Kevin Walzer, as
        TkDND does not work well under all circumstances in OS X 10.6.
        (Reported by Kevin Walzer on 23 Dec 2010).

2010-08-03  Petasis George  <petasis@iit.demokritos.gr>
        TkDND 2.2 released.
        * library/tkdnd_windows.tcl:
        * win/OleDND.h: Fixes for compiling with UNICODE & _UNICODE.

2010-07-28  Petasis George  <petasis@iit.demokritos.gr>
        * win/Makefile: Updated.

        * library/tkdnd_unix.tcl:
        * library/tkdnd_windows.tcl: Fixed bug 2169256.

        * library/tkdnd.tcl: Fixed bug 2486830.

2010-06-16  Petasis George  <petasis@iit.demokritos.gr>
	* Makefile.in:
	* configure.in:
	* win/Makefile:
	* win/TkDND_OleDND.cpp:
	* unix/TkDND_XDND.c: Applied a patch from Andreas Kupries, which
	make the unix code compatible with compilers supporting C89 (i.e.
	AIX's cc). Also, the TEA files were updated.

	* /unix/TkDND_XDND.c: Fixed a bug in TkDND_RegisterTypesObjCmd.
	It seems that KDE wants the XdndAware property on the window these
	days, and not at the toplevel one.

2010-06-11  Petasis George  <petasis@iit.demokritos.gr>
        TkDND 2.1 released.

2010-05-05  Petasis George  <petasis@iit.demokritos.gr>
        * /macosx/macdnd.m: Several fixes. The most important are:
        Do not initiate a drag if the clipboard is empty (i.e. because we
          cannot handle any of the provided types).
        Fixed drag icon slide when the drag is canceled.

2010-04-30  Petasis George  <petasis@iit.demokritos.gr>
        * /macosx/macdnd.m: Several changes:
        Moved drag operation inside TkDND_DoDragDropObjCmd. This means that